Header section added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Get your bike & Shear your ride</title>
 
+    <!-- Custom css -->
+    <link rel="stylesheet" href="./asset/css/style.css" />
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="./asset/css/bootstrap.min.css" />
   </head>
   <body>
+    <header class="header__bg">
+      <section class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"
+              ><h2 class="display-7 fst-italic text-light">MyHonda</h2></a
+            >
+            <div class="login me-2 me-md-0 ms-md-5 d-lg-none d-block">
+              <button
+                class="btn px-2 py-1 px-sm-4 py-sm-2 text-light"
+                style="background-color: #e76f51"
+              >
+                Login
+              </button>
+            </div>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a
+                    class="nav-link text-light px-3"
+                    aria-current="page"
+                    href="#"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-light px-3" href="#">Shop</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-light px-3" href="#">News</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-light px-3" href="#">Contact</a>
+                </li>
+              </ul>
+            </div>
+            <div class="login ms-5 d-none d-lg-block">
+              <button
+                class="btn px-4 py-2 text-light"
+                style="background-color: #e76f51"
+              >
+                Login
+              </button>
+            </div>
+          </div>
+        </nav>
+      </section>
+    </header>
+
     <!-- Bootstrap bundle script -->
     <script src="./asset/js/bootstrap.bundle.min.js"></script>
     <!-- Font awesome icon js -->
