--- a/index.html
+++ b/index.html
@@ -70,6 +70,91 @@
           </div>
         </nav>
       </section>
+      <!-- Banner section start -->
+      <section class="container pb-4 pt-3 py-lg-5">
+        <div class="row gy-lg-5 gy-5 justify-content-between">
+          <div class="col-md-6 col-sm-12 col-12">
+            <p class="pt-5 text-light small">
+              Computer-controlled digital transistorized with electronic advance
+            </p>
+            <h1 class="display-5 text-light mb-3">Honda CBR 300R</h1>
+            <p class="text-light small mb-4">
+              Hero MotoCorp Limited, formerly Hero Honda, is an Indian
+              multinational motorcycle and scooter manufacturer headquartered in
+              New Delhi, India.
+            </p>
+
+            <button
+              type="button"
+              class="btn px-4 py-2 text-light"
+              style="background-color: #e76f51"
+              data-bs-toggle="modal"
+              data-bs-target="#staticBackdrop"
+            >
+              Purchase
+            </button>
+            <div
+              class="modal fade"
+              id="staticBackdrop"
+              data-bs-backdrop="static"
+              data-bs-keyboard="false"
+              tabindex="-1"
+              aria-labelledby="staticBackdropLabel"
+              aria-hidden="true"
+            >
+              <div
+                class="
+                  modal-dialog modal-dialog-centered modal-dialog-scrollable
+                "
+              >
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">
+                      Purchase info
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <h2>#Requirements:</h2>
+                    <ul>
+                      <li>Identity Proof (ID Proof)</li>
+                      <li>Address Proof</li>
+                      <li>Nationality Proof</li>
+                      <li>Income Proof</li>
+                      <li>Passport Size Photographs</li>
+                      <li>Income Tax Returns</li>
+                    </ul>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="button" class="btn btn-success">
+                      Understood
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 col-12">
+            <img
+              class="img-fluid"
+              src="./images/header-bike.png"
+              alt="banner"
+            />
+          </div>
+        </div>
+      </section>
     </header>
 
     <!-- Bootstrap bundle script -->
