--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
       </section>
       <!-- Banner section start -->
       <section class="container pb-4 pt-3 py-lg-5">
-        <div class="row gy-lg-5 gy-5 justify-content-between">
+        <div class="row gy-lg-5 gy-5 justify-content-between pt-lg-5">
           <div class="col-md-6 col-sm-12 col-12">
             <p class="pt-5 text-light small">
               Computer-controlled digital transistorized with electronic advance
             </p>
-            <h1 class="display-5 text-light mb-3">Honda CBR 300R</h1>
+            <h1 class="display-5 text-light mb-3">
+              <strong> Honda CBR 300R</strong>
+            </h1>
             <p class="text-light small mb-4">
               Hero MotoCorp Limited, formerly Hero Honda, is an Indian
               multinational motorcycle and scooter manufacturer headquartered in
@@ -156,7 +158,112 @@
         </div>
       </section>
     </header>
+    <!-- Main part start -->
+    <main>
+      <!-- Featured section start -->
+      <section class="featured container py-5">
+        <div class="feautred__title my-3 my-lg-5 text-center">
+          <h1 class="display-5 text-dark">
+            <strong>Featured Bike 2021</strong>
+          </h1>
+          <small class="Custom__textColor">Best bike collection</small>
+          <hr class="line" />
+        </div>
+        <div class="row pt-5 gx-lg-5 g-5 feaured__row">
+          <div class="col-lg-4 col-sm-6 col-12 pb-4 pe-lg-5 pe-sm-3">
+            <img
+              class="img-fluid"
+              src="./images/feature-bike.jpg"
+              alt="featured-bike"
+            />
+          </div>
+          <div class="col-lg-4 col-sm-6 col-12 pb-4 pe-lg-5 pe-sm-3">
+            <img
+              class="img-fluid"
+              src="./images/feature-bike.jpg"
+              alt="featured-bike"
+            />
+          </div>
+          <div class="col-lg-4 col-sm-6 col-12 ps-lg-5 ps-sm-3">
+            <img
+              class="img-fluid"
+              src="./images/feature-bike.jpg"
+              alt="featured-bike"
+            />
+          </div>
+        </div>
+      </section>
+      <!-- Latest-news section start -->
+      <section class="latest_News container py-5">
+        <!-- Latest News Title -->
+        <div class="my-3 my-lg-5 text-center">
+          <h1 class="display-5 text-dark">
+            <strong>Latest News</strong>
+          </h1>
+        </div>
+        <div class="row gy-4">
+          <article class="col-lg-4 col-sm-6 col-12">
+            <div class="border border-1 rounded p-3">
+              <div class="bike__img">
+                <img
+                  class="img-fluid"
+                  src="./images/bike-1.png"
+                  alt="baike-1"
+                />
+              </div>
+              <div class="bike__info">
+                <h3 class="text-dark mt-4 mb-2">Ducati XDIAVEL S-73</h3>
+                <p class="pb-4">
+                  As it stands, Ducati Panigale V4 R is the most powerful road
+                  legal production motorcycle sold in Bangladesh.
+                </p>
+                <button class="btn px-4 py-2">Read More</button>
+              </div>
+            </div>
+          </article>
+          <article class="col-lg-4 col-sm-6 col-12">
+            <div class="border border-1 rounded p-3">
+              <div class="bike__img">
+                <img
+                  class="img-fluid"
+                  src="./images/bike-2.png"
+                  alt="baike-1"
+                />
+              </div>
+              <div class="bike__info">
+                <h3 class="text-dark mt-4 mb-2">Motorcycles Scooters</h3>
+                <p class="pb-4">
+                  As it stands, Ducati Panigale V4 R is the most powerful road
+                  legal production motorcycle sold in Bangladesh.
+                </p>
+                <button class="btn px-4 py-2">Read More</button>
+              </div>
+            </div>
+          </article>
+          <article class="col-lg-4 col-sm-6 col-12">
+            <div class="border border-1 rounded p-3">
+              <div class="bike__img">
+                <img
+                  class="img-fluid"
+                  src="./images/bike-1.png"
+                  alt="baike-1"
+                />
+              </div>
+              <div class="bike__info">
+                <h3 class="text-dark mt-4 mb-2">2021 Honda CBR500R</h3>
+                <p class="pb-4">
+                  As it stands, Ducati Panigale V4 R is the most powerful road
+                  legal production motorcycle sold in Bangladesh.
+                </p>
+                <button class="btn px-4 py-2">Read More</button>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
 
+      <!--  -->
+    </main>
     <!-- Bootstrap bundle script -->
     <script src="./asset/js/bootstrap.bundle.min.js"></script>
     <!-- Font awesome icon js -->
