Happy-Clients section end

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <!-- Latest-news section start -->
       <section class="latest_News container py-5">
         <!-- Latest News Title -->
-        <div class="my-3 my-lg-5 text-center">
+        <div class="my-5 my-lg-3 text-center">
           <h1 class="display-5 text-dark">
             <strong>Latest News</strong>
           </h1>
@@ -261,8 +261,93 @@
           </article>
         </div>
       </section>
-
-      <!--  -->
+      <!-- Happy Clients section start -->
+      <section class="container py-5">
+        <div class="clients__title text-center my-5 my-lg-3 my-lg-5">
+          <h1 class="display-5 text-dark">
+            <strong
+              >Happy <span class="Custom__textColor">Clients says</span></strong
+            >
+          </h1>
+        </div>
+        <div class="row gy-5">
+          <article class="col-lg-4 col-sm-6 col-12">
+            <div class="border border-1 py-5 px-4 text-center">
+              <div class="clients__img">
+                <img class="img-fluid" src="./images/user-1.png" />
+              </div>
+              <div class="clients__info text-center text-secondary pb-2">
+                <p class="pt-4">
+                  If you want to generate more positive reviews, it helps to
+                  know what an excellent review really looks like. You might be
+                  thinking, “Duh, I know this already, people say nice things
+                  about my business.”
+                </p>
+                <div class="clients__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
+                <h6 class="small my-3" style="color: #23a6f0">Stan Lee</h6>
+                <p class="text-dark small m-0"><strong>Writer</strong></p>
+              </div>
+            </div>
+          </article>
+          <article class="col-lg-4 col-sm-6 col-12">
+            <div class="border border-1 py-5 px-4 text-center">
+              <div class="clients__img">
+                <img class="img-fluid" src="./images/user-2.png" />
+              </div>
+              <div class="clients__info text-center text-secondary pb-2">
+                <p class="pt-4">
+                  If you want to generate more positive reviews, it helps to
+                  know what an excellent review really looks like. You might be
+                  thinking, “Duh, I know this already, people say nice things
+                  about my business.”
+                </p>
+                <div class="clients__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
+                <h6 class="small my-3" style="color: #23a6f0">Mung Hae</h6>
+                <p class="text-dark small m-0"><strong>Banker</strong></p>
+              </div>
+            </div>
+          </article>
+          <article class="col-lg-4 col-sm-6 col-12">
+            <div class="border border-1 py-5 px-4 text-center">
+              <div class="clients__img">
+                <img
+                  class="img-fluid rounded-circle"
+                  src="./images/user-3.jpg"
+                />
+              </div>
+              <div class="clients__info text-center text-secondary pb-2">
+                <p class="pt-4">
+                  If you want to generate more positive reviews, it helps to
+                  know what an excellent review really looks like. You might be
+                  thinking, “Duh, I know this already, people say nice things
+                  about my business.”
+                </p>
+                <div class="clients__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
+                <h6 class="small my-3" style="color: #23a6f0">Lady Gaga</h6>
+                <p class="text-dark small m-0"><strong>Singer</strong></p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
     </main>
     <!-- Bootstrap bundle script -->
     <script src="./asset/js/bootstrap.bundle.min.js"></script>
