Faq and History section added

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <img
                   class="img-fluid"
                   src="./images/bike-2.png"
-                  alt="baike-1"
+                  alt="baike-2"
                 />
               </div>
               <div class="bike__info">
@@ -246,7 +246,7 @@
                 <img
                   class="img-fluid"
                   src="./images/bike-1.png"
-                  alt="baike-1"
+                  alt="baike-3"
                 />
               </div>
               <div class="bike__info">
@@ -274,7 +274,7 @@
           <article class="col-lg-4 col-sm-6 col-12">
             <div class="border border-1 py-5 px-4 text-center">
               <div class="clients__img">
-                <img class="img-fluid" src="./images/user-1.png" />
+                <img class="img-fluid" src="./images/user-1.png" alt="user-1" />
               </div>
               <div class="clients__info text-center text-secondary pb-2">
                 <p class="pt-4">
@@ -298,7 +298,7 @@
           <article class="col-lg-4 col-sm-6 col-12">
             <div class="border border-1 py-5 px-4 text-center">
               <div class="clients__img">
-                <img class="img-fluid" src="./images/user-2.png" />
+                <img class="img-fluid" src="./images/user-2.png" alt="user-2" />
               </div>
               <div class="clients__info text-center text-secondary pb-2">
                 <p class="pt-4">
@@ -325,6 +325,7 @@
                 <img
                   class="img-fluid rounded-circle"
                   src="./images/user-3.jpg"
+                  alt="user-3"
                 />
               </div>
               <div class="clients__info text-center text-secondary pb-2">
@@ -343,6 +344,259 @@
                 </div>
                 <h6 class="small my-3" style="color: #23a6f0">Lady Gaga</h6>
                 <p class="text-dark small m-0"><strong>Singer</strong></p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+      <!-- FAQ section start -->
+      <section class="container py-5">
+        <div class="Faq__title text-center my-5 my-lg-3 my-lg-5">
+          <h1 class="display-5 text-dark pb-5">
+            <strong
+              >Frequently Asked
+              <span class="Custom__textColor">Question</span></strong
+            >
+          </h1>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-sm-12 col-12">
+            <img class="img-fluid" src="./images/faq.png" alt="faq-image" />
+          </div>
+          <div class="col-md-6 col-sm-12 col-12">
+            <div class="accordion" id="accordionExample">
+              <!-- Single item -->
+              <div class="accordion-item mb-4">
+                <h2
+                  class="accordion-header border border-1 py-1"
+                  id="headingOne"
+                >
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseOne"
+                    aria-expanded="false"
+                    aria-controls="collapseOne"
+                  >
+                    What are the most important things I should know about
+                    riding a bike?
+                  </button>
+                </h2>
+                <div
+                  id="collapseOne"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingOne"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      Safety First! Always obey the rules of the road. Obey all
+                      traffic signals, signs, and laws. Get in the mindset of
+                      “driving” your bike—not just “riding” your bike. This will
+                      help you be a more focused and legally compliant bike
+                      rider.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- Single item -->
+              <div class="accordion-item mb-4">
+                <h2
+                  class="accordion-header border border-1 py-2"
+                  id="headingTwo"
+                >
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo"
+                    aria-expanded="false"
+                    aria-controls="collapseTwo"
+                  >
+                    How can I tell if my helmet is old and I need a new one?
+                  </button>
+                </h2>
+                <div
+                  id="collapseTwo"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingTwo"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      Bear in mind that if the helmet did its job most people
+                      would tell you that they did not even hit their head, or
+                      did not hit their head that hard. And the thin shells on
+                      most helmets now tend to hide any dents in the foam. But
+                      if you can see marks on the shell or measure any foam
+                      crush at all, replace the helmet.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- Single item -->
+              <div class="accordion-item mb-4">
+                <h2
+                  class="accordion-header border border-top-1 py-2"
+                  id="headingThree"
+                >
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree"
+                    aria-expanded="false"
+                    aria-controls="collapseThree"
+                  >
+                    My bike has been in storage is it safe to ride?
+                  </button>
+                </h2>
+                <div
+                  id="collapseThree"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingThree"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      Cars and bikes that have not been used for more than six
+                      months are likely to see degradation of the oils and
+                      greases in them. If the vehicle is used after that it will
+                      need to be serviced first, replacing oil and coolant if
+                      needed
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- Single item -->
+              <div class="accordion-item">
+                <h2
+                  class="accordion-header border border-1 py-2"
+                  id="headingFour"
+                >
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseFour"
+                    aria-expanded="false"
+                    aria-controls="collapseFour"
+                  >
+                    What rules should I follow when riding my bike?
+                  </button>
+                </h2>
+                <div
+                  id="collapseFour"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingFour"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <ul>
+                      <li>Protect your brain, save your life. For more</li>
+                      <li>Adjust Your Bicycle to Fit</li>
+                      <li>Check Your Equipment</li>
+                      <li>See and Be Seen</li>
+                      <li>Control Your Bicycle</li>
+                      <li>Watch for and Avoid Road Hazards</li>
+                      <li>Avoid Riding at Night</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!---=============== History section ================-->
+      <section class="container">
+        <div class="history__title my-3 my-lg-5 text-center">
+          <h1 class="display-5 text-dark">
+            <strong>History</strong>
+          </h1>
+          <hr class="line border-dark" />
+        </div>
+        <div class="row gy-4">
+          <article class="col-lg-3 col-sm-6 col-12">
+            <div class="border border-1 shadow p-2">
+              <div>
+                <img
+                  class="img-fluid"
+                  src="./images/history/h-1.jpg"
+                  alt="history-1"
+                />
+              </div>
+              <div>
+                <h5 class="my-4">
+                  1949 First mass production of motorcycle begins
+                </h5>
+                <a
+                  href="https://www.google.com/"
+                  class="btn border border-1 border-dark mb-2"
+                  >More &nbsp;<i class="fas fa-angle-right"></i
+                ></a>
+              </div>
+            </div>
+          </article>
+          <article class="col-lg-3 col-sm-6 col-12">
+            <div class="border border-1 shadow p-2">
+              <div>
+                <img
+                  class="img-fluid"
+                  src="./images/history/h-2.jpg"
+                  alt="history-1"
+                />
+              </div>
+              <div>
+                <h5 class="my-4">
+                  1949 First mass production of motorcycle begins
+                </h5>
+                <a class="btn border border-1 border-dark mb-2"
+                  >More &nbsp;<i class="fas fa-angle-right"></i
+                ></a>
+              </div>
+            </div>
+          </article>
+          <article class="col-lg-3 col-sm-6 col-12">
+            <div class="border border-1 shadow p-2">
+              <div>
+                <img
+                  class="img-fluid"
+                  src="./images/history/h-3.jpg"
+                  alt="history-1"
+                />
+              </div>
+              <div>
+                <h5 class="my-4">
+                  1949 First mass production of motorcycle begins
+                </h5>
+                <a
+                  href="https://www.google.com/"
+                  class="btn border border-1 border-dark mb-2"
+                  >More &nbsp;<i class="fas fa-angle-right"></i
+                ></a>
+              </div>
+            </div>
+          </article>
+          <article class="col-lg-3 col-sm-6 col-12">
+            <div class="border border-1 shadow p-2">
+              <div>
+                <img
+                  class="img-fluid"
+                  src="./images/history/h-4.jpg"
+                  alt="history-1"
+                />
+              </div>
+              <div>
+                <h5 class="my-4">
+                  1949 First mass production of motorcycle begins
+                </h5>
+                <a
+                  href="https://www.google.com/"
+                  class="btn border border-1 border-dark mb-2"
+                  >More &nbsp;<i class="fas fa-angle-right"></i
+                ></a>
               </div>
             </div>
           </article>
