--- a/index.html
+++ b/index.html
@@ -161,16 +161,16 @@
     <!-- Main part start -->
     <main>
       <!-- Featured section start -->
-      <section class="featured container py-5">
-        <div class="feautred__title my-3 my-lg-5 text-center">
-          <h1 class="display-5 text-dark">
+      <section class="featured container py-5 py-lg-3">
+        <div class="feautred__title my-5 text-center">
+          <h1 class="display-5 text-dark mt-2">
             <strong>Featured Bike 2021</strong>
           </h1>
           <small class="Custom__textColor">Best bike collection</small>
           <hr class="line" />
         </div>
-        <div class="row pt-5 gx-lg-5 g-5 feaured__row">
-          <div class="col-lg-4 col-sm-6 col-12 pb-4 pe-lg-5 pe-sm-3">
+        <div class="row pt-5 gx-lg-5 g-5 gy-lg-5 feaured__row">
+          <div class="col-lg-4 col-sm-6 col-12 pb-5 pe-lg-5 pe-sm-3">
             <img
               class="img-fluid"
               src="./images/feature-bike.jpg"
@@ -194,9 +194,9 @@
         </div>
       </section>
       <!-- Latest-news section start -->
-      <section class="latest_News container py-5">
+      <section class="latest_News container pb-5 pb-0 pt-lg-5">
         <!-- Latest News Title -->
-        <div class="my-5 my-lg-3 text-center">
+        <div class="my-4 my-lg-5 text-center">
           <h1 class="display-5 text-dark">
             <strong>Latest News</strong>
           </h1>
@@ -262,15 +262,15 @@
         </div>
       </section>
       <!-- Happy Clients section start -->
-      <section class="container py-5">
-        <div class="clients__title text-center my-5 my-lg-3 my-lg-5">
+      <section class="container py-3 py-lg-5">
+        <div class="clients__title text-center mt-0 mb-3 mb-lg-5 my-lg-5">
           <h1 class="display-5 text-dark">
             <strong
               >Happy <span class="Custom__textColor">Clients says</span></strong
             >
           </h1>
         </div>
-        <div class="row gy-5">
+        <div class="row gy-4 gy-lg-5 mt-4">
           <article class="col-lg-4 col-sm-6 col-12">
             <div class="border border-1 py-5 px-4 text-center">
               <div class="clients__img">
@@ -349,24 +349,24 @@
           </article>
         </div>
       </section>
-      <!-- FAQ section start -->
+      <!--=============== FAQ section start =============-->
       <section class="container py-5">
-        <div class="Faq__title text-center my-5 my-lg-3 my-lg-5">
-          <h1 class="display-5 text-dark pb-5">
+        <div class="Faq__title text-center mb-4 mb-lg-5 my-md-5">
+          <h1 class="display-5 text-dark pb-lg-5 mt-4">
             <strong
               >Frequently Asked
               <span class="Custom__textColor">Question</span></strong
             >
           </h1>
         </div>
-        <div class="row">
-          <div class="col-md-6 col-sm-12 col-12">
+        <div class="row g-5 pt-lg-2">
+          <div class="col-md-6 col-sm-12 col-12 pe-lg-5 pb-md-0 pb-3">
             <img class="img-fluid" src="./images/faq.png" alt="faq-image" />
           </div>
-          <div class="col-md-6 col-sm-12 col-12">
+          <div class="col-md-6 col-sm-12 col-12 ps-lg-5">
             <div class="accordion" id="accordionExample">
               <!-- Single item -->
-              <div class="accordion-item mb-4">
+              <div class="accordion-item mb-3">
                 <h2
                   class="accordion-header border border-1 py-1"
                   id="headingOne"
@@ -401,7 +401,7 @@
                 </div>
               </div>
               <!-- Single item -->
-              <div class="accordion-item mb-4">
+              <div class="accordion-item mb-3">
                 <h2
                   class="accordion-header border border-1 py-2"
                   id="headingTwo"
@@ -436,7 +436,7 @@
                 </div>
               </div>
               <!-- Single item -->
-              <div class="accordion-item mb-4">
+              <div class="accordion-item mb-3">
                 <h2
                   class="accordion-header border border-top-1 py-2"
                   id="headingThree"
@@ -510,8 +510,8 @@
         </div>
       </section>
       <!---=============== History section ================-->
-      <section class="container">
-        <div class="history__title my-3 my-lg-5 text-center">
+      <section class="container pb-5">
+        <div class="history__title my-5 my-lg-5 text-center">
           <h1 class="display-5 text-dark">
             <strong>History</strong>
           </h1>
@@ -602,7 +602,104 @@
           </article>
         </div>
       </section>
+      <!--============= Subscribe section start =============-->
+      <section class="subscribe mt-5 container-fluid header__bg border-bottom">
+        <div class="container">
+          <div
+            class="
+              row
+              flex-column
+              py-5
+              text-center
+              justify-content-center
+              align-items-center
+            "
+          >
+            <h1 class="text-light mb-0">
+              Subscribe Us <i class="far fa-smile-wink Custom__textColor"></i>
+            </h1>
+            <p class="small text-light mb-5">
+              Get our company updates through your email
+            </p>
+
+            <form class="mb-5" title="key">
+              <div
+                class="
+                  subscribe_input
+                  rounded-pill
+                  d-flex
+                  justify-content-center
+                  align-items-center
+                "
+              >
+                <input
+                  class="ps-sm-4 py-sm-3 d-none d-md-block"
+                  type="email"
+                  name="email"
+                  placeholder="Enter your email"
+                />
+                <input
+                  class="ps-4 py-3 form-control d-md-none d-sm-block"
+                  type="email"
+                  name="email"
+                  placeholder="Enter your email"
+                />
+                <button class="btn px-2 py-3 ps-sm-4 py-sm-3 text-light">
+                  Subscribe
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
+    <!--==== Footer part start ====-->
+    <footer class="header__bg">
+      <section class="container py-5">
+        <div class="row gy-4">
+          <div class="col-md-6 col-sm-12">
+            <p class="text-light mb-2">
+              Download Now &nbsp;&nbsp;&nbsp; License
+            </p>
+            <div class="d-flex flex-wrap mb-4">
+              <a class="text-light pe-4 text-decoration-none" href="#">About</a>
+              <a class="text-light pe-4 text-decoration-none" href="#"
+                >Features</a
+              >
+              <a class="text-light pe-4 text-decoration-none" href="#"
+                >Pricing</a
+              >
+              <a class="text-light pe-4 text-decoration-none" href="#"
+                >Careers</a
+              >
+              <a class="text-light pe-4 text-decoration-none" href="#">Help</a>
+              <a class="text-light text-decoration-none" href="#"
+                >Privacy Policy</a
+              >
+            </div>
+            <small class="text-light">© 2020 bike. All rights reserved</small>
+          </div>
+          <div class="col-md-6 col-sm-12 text-md-end">
+            <h5 class="text-light mb-3">Get The App</h5>
+
+            <a class="d-block mb-3"
+              ><img
+                class="img-fluid"
+                src="./images/footer/2.png"
+                alt="app-store logo"
+              />
+            </a>
+            <a class="d-block">
+              <img
+                class="img-fluid"
+                src="./images/footer/1.png"
+                alt="play-store logo"
+              />
+            </a>
+          </div>
+        </div>
+      </section>
+    </footer>
     <!-- Bootstrap bundle script -->
     <script src="./asset/js/bootstrap.bundle.min.js"></script>
     <!-- Font awesome icon js -->
