History section modified and project done

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
         </nav>
       </section>
-      <!-- Banner section start -->
+      <!--============ Banner section start ===========-->
       <section class="container pb-4 pt-3 py-lg-5">
         <div class="row gy-lg-5 gy-5 justify-content-between pt-lg-5">
           <div class="col-md-6 col-sm-12 col-12">
@@ -160,7 +160,7 @@
     </header>
     <!-- Main part start -->
     <main>
-      <!-- Featured section start -->
+      <!--=============== Featured section start ===============-->
       <section class="featured container py-5 py-lg-3">
         <div class="feautred__title my-5 text-center">
           <h1 class="display-5 text-dark mt-2">
@@ -193,7 +193,7 @@
           </div>
         </div>
       </section>
-      <!-- Latest-news section start -->
+      <!--================ Latest-news section start ==============-->
       <section class="latest_News container pb-5 pb-0 pt-lg-5">
         <!-- Latest News Title -->
         <div class="my-4 my-lg-5 text-center">
@@ -261,7 +261,7 @@
           </article>
         </div>
       </section>
-      <!-- Happy Clients section start -->
+      <!--================ Happy Clients section start============== -->
       <section class="container py-3 py-lg-5">
         <div class="clients__title text-center mt-0 mb-3 mb-lg-5 my-lg-5">
           <h1 class="display-5 text-dark">
@@ -528,14 +528,55 @@
                 />
               </div>
               <div>
-                <h5 class="my-4">
-                  1949 First mass production of motorcycle begins
-                </h5>
-                <a
-                  href="https://www.google.com/"
+                <h5 class="my-4">1949 First production of motorcycle begins</h5>
+                <button
+                  type="button"
                   class="btn border border-1 border-dark mb-2"
-                  >More &nbsp;<i class="fas fa-angle-right"></i
-                ></a>
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                >
+                  More &nbsp;<i class="fas fa-angle-right"></i>
+                </button>
+                <div
+                  class="modal fade"
+                  id="exampleModal"
+                  tabindex="-1"
+                  aria-labelledby="exampleModalLabel"
+                  aria-hidden="true"
+                >
+                  <div
+                    class="
+                      modal-dialog modal-dialog-centered modal-dialog-scrollable
+                    "
+                  >
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                          1949 First mass production of motorcycle beginsModal
+                          title
+                        </h5>
+                      </div>
+                      <div class="modal-body">
+                        <img class="img-fluid" src="./images/history/h-1.jpg" />
+                        <p class="my-4">
+                          Honda's first full-fledged motorcycle, the beautiful
+                          maroon colored Dream D-type debuted with an air-cooled
+                          98cc 2-cycle single-cylinder engine. It was produced
+                          at the Noguchi plant in Hamamtsu-city, Shizuoka.
+                        </p>
+                      </div>
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="btn btn-secondary"
+                          data-bs-dismiss="modal"
+                        >
+                          Close
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </article>
@@ -549,12 +590,55 @@
                 />
               </div>
               <div>
-                <h5 class="my-4">
-                  1949 First mass production of motorcycle begins
-                </h5>
-                <a class="btn border border-1 border-dark mb-2"
-                  >More &nbsp;<i class="fas fa-angle-right"></i
-                ></a>
+                <h5 class="my-4">1952 Motorcycle export begins</h5>
+                <button
+                  type="button"
+                  class="btn border border-1 border-dark mb-2"
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal-2"
+                >
+                  More &nbsp;<i class="fas fa-angle-right"></i>
+                </button>
+                <div
+                  class="modal fade"
+                  id="exampleModal-2"
+                  tabindex="-1"
+                  aria-labelledby="exampleModalLabel"
+                  aria-hidden="true"
+                >
+                  <div
+                    class="
+                      modal-dialog modal-dialog-centered modal-dialog-scrollable
+                    "
+                  >
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                          1952 Motorcycle export begins
+                        </h5>
+                      </div>
+                      <div class="modal-body">
+                        <img class="img-fluid" src="./images/history/h-2.jpg" />
+                        <p class="my-4">
+                          Honda's overseas expansion began in 1952 when the Cub
+                          Type F motorcycle was first exported to Taiwan,
+                          followed by the Dream to Okinawa and the Philippines
+                          in the same year, and the Juno to the United States on
+                          a trial basis in 1954.
+                        </p>
+                      </div>
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="btn btn-secondary"
+                          data-bs-dismiss="modal"
+                        >
+                          Close
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </article>
@@ -569,13 +653,60 @@
               </div>
               <div>
                 <h5 class="my-4">
-                  1949 First mass production of motorcycle begins
+                  1954 First Scooter Juno K-type is introduced
                 </h5>
-                <a
-                  href="https://www.google.com/"
+                <button
+                  type="button"
                   class="btn border border-1 border-dark mb-2"
-                  >More &nbsp;<i class="fas fa-angle-right"></i
-                ></a>
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal-3"
+                >
+                  More &nbsp;<i class="fas fa-angle-right"></i>
+                </button>
+                <div
+                  class="modal fade"
+                  id="exampleModal-3"
+                  tabindex="-1"
+                  aria-labelledby="exampleModalLabel"
+                  aria-hidden="true"
+                >
+                  <div
+                    class="
+                      modal-dialog modal-dialog-centered modal-dialog-scrollable
+                    "
+                  >
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                          1954 First Scooter Juno K-type is introduced
+                        </h5>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          class="img-fluid"
+                          src="./images/history/h-3.jpg"
+                          alt="bike"
+                        />
+                        <p class="my-4">
+                          The Juno K-type was the most advanced scooter at the
+                          time, taking advantage of its many innovations: it had
+                          the world’s first self-starter for a motorcycle, and a
+                          large, all-weather windscreen which was further
+                          equipped with turn-signals, another first.
+                        </p>
+                      </div>
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="btn btn-secondary"
+                          data-bs-dismiss="modal"
+                        >
+                          Close
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </article>
@@ -589,14 +720,61 @@
                 />
               </div>
               <div>
-                <h5 class="my-4">
-                  1949 First mass production of motorcycle begins
-                </h5>
-                <a
-                  href="https://www.google.com/"
+                <h5 class="my-4">1958 Supercub C100 is introduced</h5>
+                <button
+                  type="button"
                   class="btn border border-1 border-dark mb-2"
-                  >More &nbsp;<i class="fas fa-angle-right"></i
-                ></a>
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal-4"
+                >
+                  More &nbsp;<i class="fas fa-angle-right"></i>
+                </button>
+                <div
+                  class="modal fade"
+                  id="exampleModal-4"
+                  tabindex="-1"
+                  aria-labelledby="exampleModalLabel"
+                  aria-hidden="true"
+                >
+                  <div
+                    class="
+                      modal-dialog modal-dialog-centered modal-dialog-scrollable
+                    "
+                  >
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                          1958 Supercub C100 is introduced
+                        </h5>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          class="img-fluid"
+                          src="./images/history/h-4.jpg"
+                          alt="bike"
+                        />
+                        <p class="my-4">
+                          The Honda Super Cub C100 was equipped with an
+                          innovative and high-performance 50cc 4-stroke engine,
+                          creative and unique designs including the low-floor
+                          backbone, a centrifugal clutch system and a large
+                          plastic leg shield. The basic design and concept of
+                          the first generation remained virtually unchanged and
+                          passed on to current models.
+                        </p>
+                      </div>
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="btn btn-secondary"
+                          data-bs-dismiss="modal"
+                        >
+                          Close
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </article>
@@ -644,7 +822,9 @@
                   name="email"
                   placeholder="Enter your email"
                 />
-                <button class="btn px-2 py-3 ps-sm-4 py-sm-3 text-light">
+                <button
+                  class="btn px-3 px-md-3 py-3 py-sm-3 text-light text-center"
+                >
                   Subscribe
                 </button>
               </div>
