--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <!--================ Latest-news section start ==============-->
       <section class="latest_News container pb-5 pb-0 pt-lg-5">
         <!-- Latest News Title -->
-        <div class="my-4 my-lg-5 text-center">
+        <div class="my-4 my-sm-5 text-center">
           <h1 class="display-5 text-dark">
             <strong>Latest News</strong>
           </h1>
@@ -352,7 +352,7 @@
       <!--=============== FAQ section start =============-->
       <section class="container py-5">
         <div class="Faq__title text-center mb-4 mb-lg-5 my-md-5">
-          <h1 class="display-5 text-dark pb-lg-5 mt-4">
+          <h1 class="display-5 text-dark pb-sm-5 mt-4">
             <strong
               >Frequently Asked
               <span class="Custom__textColor">Question</span></strong
@@ -511,7 +511,7 @@
       </section>
       <!---=============== History section ================-->
       <section class="container pb-5">
-        <div class="history__title my-5 my-lg-5 text-center">
+        <div class="history__title my-3 my-sm-5 pb-3 pb-sm-4 text-center">
           <h1 class="display-5 text-dark">
             <strong>History</strong>
           </h1>
