Banner text spacing modified

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
       <section class="container pb-4 pt-3 py-lg-5">
         <div class="row gy-lg-5 gy-5 justify-content-between pt-lg-5">
           <div class="col-md-6 col-sm-12 col-12">
-            <p class="pt-5 text-light small">
+            <p class="pt-5 text-light fw-light small">
               Computer-controlled digital transistorized with electronic advance
             </p>
-            <h1 class="display-5 text-light mb-3">
+            <h1 class="display-5 text-light fw-light mb-3">
               <strong> Honda CBR 300R</strong>
             </h1>
             <p class="text-light small mb-4">
