--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                   id="headingOne"
                 >
                   <button
-                    class="accordion-button collapsed"
+                    class="accordion-button"
                     type="button"
                     data-bs-toggle="collapse"
                     data-bs-target="#collapseOne"
@@ -385,7 +385,7 @@
                 </h2>
                 <div
                   id="collapseOne"
-                  class="accordion-collapse collapse"
+                  class="accordion-collapse collapse show"
                   aria-labelledby="headingOne"
                   data-bs-parent="#accordionExample"
                 >
